--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
         "test": "mocha tests/unit/libs/*.js"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "express": "~3.3.1",
     "request": "~2.21.0",
