--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "scripts": {
         "test": "mocha tests/unit/libs/*.js"
   },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/yahoo/mockaccino.git"
+  },
   "dependencies": {
     "express": "~3.3.1",
     "request": "~2.21.0",
