Added CLI command name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mockaccino",
   "description": "A server that mocks webservices",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "contributors": [
     {
@@ -27,6 +27,9 @@
   "repository" : {
     "type" : "git",
     "url" : "https://github.com/yahoo/mockaccino.git"
+  },
+  "bin": {
+    "mockaccino":"app.js"
   },
   "dependencies": {
     "express": "~3.3.1",
